<resources>
    <string name="app_name">我的12306</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab1">车票</string>
    <string name="tab2">订单</string>
    <string name="tab3">&#060;我的</string>
    <string name="startCity">出发城市</string>
    <string name="endCity">到达城市</string>
    <string name="ticketDate">出发日期</string>
    <string name="ticketQuery">查询</string>
    <string name="queryHistory">查询历史</string>
    <string name="hintUsername">请输入用户名</string>
    <string name="hintPassword">请输入密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="autoLogin">自动登录</string>
    <string name="forgetPassword">忘记密码？</string>
    <string name="myLinkman">我的联系人</string>
    <string name="myAccount">我的账户</string>
    <string name="myPassword">我的密码</string>
    <string name="exit">退出登录</string>
    <string name="unpaid">待支付</string>
    <string name="wholeOrder">全部订单</string>
</resources>
