<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_margin="15dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">

    <ImageView
        android:layout_marginTop="50dp"
        android:focusable="false"
        android:layout_gravity="center"
        android:src="@drawable/user_male"
        android:gravity="center_horizontal"
        android:layout_width="60dp"
        android:layout_height="60dp"/>

    <LinearLayout
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:focusable="false"
            android:textSize="20dp"
            android:src="@drawable/my"
            android:layout_height="40dp"
            android:layout_width="40dp"/>

        <EditText
            android:inputType="text"
            android:hint="@string/hintUsername"
            android:id="@+id/et_username"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:focusable="false"
            android:src="@drawable/password"
            android:layout_height="40dp"
            android:layout_width="40dp"/>

        <EditText
            android:inputType="textPassword"
            android:id="@+id/et_pwd"
            android:hint="@string/hintPassword"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:text="@string/login"
        android:textColor="@color/colorWhite"
        android:background="@color/colorBlue"
        android:textSize="20dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"/>

    <Button
        android:textColor="@color/colorWhite"
        android:background="@color/colorBlue"
        android:id="@+id/btn_register"
        android:text="@string/register"
        android:textSize="20dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"/>

    <LinearLayout
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:gravity="center"
            android:layout_weight="1"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="left"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/cb_autoLogin"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>

            <TextView
                android:text="@string/autoLogin"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>

        </LinearLayout>

        <TextView
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:id="@+id/tv_forgetPwd"
            android:text="@string/forgetPassword"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"/>
        </LinearLayout>

</LinearLayout>