<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.MyFragment">

    <RelativeLayout
        android:layout_marginTop="120dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/ll_myLinkman"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <ImageView
                android:layout_gravity="center_vertical"
                android:src="@drawable/linkman"
                android:layout_width="30dp"
                android:layout_height="30dp"/>

            <TextView
                android:paddingLeft="20dp"
                android:gravity="center_vertical"
                android:textSize="20sp"
                android:text="@string/myLinkman"
                android:layout_height="40dp"
                android:layout_width="match_parent"/>

        </LinearLayout>

        <View
            android:layout_marginTop="10dp"
            android:id="@+id/v1"
            android:background="@color/colorGray"
            android:layout_below="@+id/ll_myLinkman"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <LinearLayout
            android:id="@+id/ll_myAccount"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/v1"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <ImageView
                android:layout_gravity="center_vertical"
                android:src="@drawable/my"
                android:layout_width="30dp"
                android:layout_height="30dp"/>

            <TextView
                android:paddingLeft="20dp"
                android:gravity="center_vertical"
                android:textSize="20sp"
                android:text="@string/myAccount"
                android:layout_height="40dp"
                android:layout_width="match_parent"/>

        </LinearLayout>

        <View
            android:layout_marginTop="10dp"
            android:id="@+id/v2"
            android:background="@color/colorGray"
            android:layout_below="@+id/ll_myAccount"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_below="@+id/v2"
            android:id="@+id/ll_myPassword"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <ImageView
                android:layout_gravity="center_vertical"
                android:src="@drawable/lock"
                android:layout_width="30dp"
                android:layout_height="30dp"/>

            <TextView
                android:paddingLeft="20dp"
                android:gravity="center_vertical"
                android:textSize="20sp"
                android:text="@string/myPassword"
                android:layout_height="40dp"
                android:layout_width="match_parent"/>

        </LinearLayout>

        <View
            android:layout_marginTop="10dp"
            android:id="@+id/v3"
            android:background="@color/colorGray"
            android:layout_below="@+id/ll_myPassword"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <Button
            android:layout_below="@+id/ll_myPassword"
            android:id="@+id/btn_exit"
            android:textColor="@color/colorWhite"
            android:textSize="25sp"
            android:background="@color/colorOrange"
            android:text="@string/exit"
            android:layout_marginTop="200dp"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_width="360dp"/>


    </RelativeLayout>

</FrameLayout>