<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.TicketFragment">

        <LinearLayout
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/startCity"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/endCity"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp">

                <LinearLayout
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_start"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="北京"
                        android:textSize="25sp" />

                    <ImageView
                        android:layout_marginLeft="10dp"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/icon_arrow_r" />
                </LinearLayout>

                <ImageView
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:src="@drawable/arrows_horizontal_lightgray"
                    android:layout_height="30dp"
                    android:layout_width="match_parent"/>



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/tv_end"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="合肥"
                        android:textSize="25sp" />

                    <ImageView
                        android:layout_marginLeft="10dp"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/icon_arrow_r" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_time"
                android:layout_marginTop="40dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/ticketDate"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/ticket_tv_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="2020-7-1 周三"
                    android:textSize="20sp" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_query"
                android:layout_marginTop="50dp"
                android:textColor="@color/colorWhite"
                android:textSize="25sp"
                android:background="@color/colorBlue"
                android:text="@string/ticketQuery"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_width="360dp"/>

            <LinearLayout
                android:layout_marginTop="40dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textSize="25sp"
                    android:ems="1"
                    android:text="@string/queryHistory"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"/>

                <ListView
                    android:layout_marginLeft="30dp"
                    android:id="@+id/lv_history"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
</FrameLayout>
